@startuml
enum ArcKind {
  normal
  read_arc
}
class Node {
}
class petriNet::Arc {
  + kind : str
  + weight : int
}
abstract class petriNet::Node {
  + name : str
}
class petriNet::PetriNet {
  + name : str
}
class petriNet::Place {
  + marking : int
}
class petriNet::Transition {
  + max_time : int
  + min_time : int
}
Node <|-- petriNet::Place
Node <|-- petriNet::Transition
petriNet::Arc "0..9999" --* "1..1" petriNet::PetriNet : arcs1
petriNet::Arc "0..9999" -- "1..1" petriNet::Node : incomings6
petriNet::Arc "1..1" -- "1..1" petriNet::PetriNet : net12
petriNet::Node "1..1" -- "1..1" petriNet::PetriNet : net3
petriNet::Node "0..9999" --* "1..1" petriNet::PetriNet : nodes0
petriNet::Arc "0..9999" -- "1..1" petriNet::Node : outgoings4
petriNet::Arc "1..1" -- "1..1" petriNet::Node : source10
petriNet::Arc "1..1" -- "1..1" petriNet::Node : target8
@enduml